fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,4 @@
   background: url(./assets/images/image3.jpg) no-repeat center center fixed;
   background-size:cover;
   height: 100%;
-  overflow: hidden;
 }
